# file-organizer

./: CMakeLists.txt  README.md
include/: tree.hpp
src/: main.cpp  tree.cpp
